--- a/event.html
+++ b/event.html
@@ -33,7 +33,14 @@
             </div>
         </header>
         <main class="main">
-            Main
+            <article>
+                <form class="reserve">
+                    <div class="reserve__checkbox">checkbox</div>
+                    <div class="reserve__scheme">scheme</div>
+                    <div class="reserve__order">order</div>
+                    <div class="reserve__legend">legend</div>
+                </form>
+            </article>
         </main>
         <footer class="page-footer">
             Footer
